--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve --mode=development",
     "build": "vue-cli-service build --mode=production",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node index.js",
+    "server": "nodemon index.js --ignore client"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -14,6 +16,7 @@
     "mockjs": "^1.1.0",
     "node-sass": "^4.14.0",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
