--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "jsonp": "^0.2.1",
     "mockjs": "^1.1.0",
     "node-sass": "^4.14.0",
+    "swiper": "^5.4.1",
     "vue": "^2.6.11",
-    "vue-awesome-swiper": "^4.1.1",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
